--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:text="marginLeft" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbMarginLeft"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:text="marginTop" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbMarginTop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:text="marginRight" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbMarginRight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:text="marginBottom" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbMarginBottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:text="paddingLeft" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbPaddingLeft"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:text="paddingRight" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbPaddingRight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -123,7 +123,7 @@
             android:layout_height="wrap_content"
             android:text="radiusLeftTop" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbRadiusLeftTop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:text="radiusLeftBottom" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbRadiusLeftBottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -157,7 +157,7 @@
             android:layout_height="wrap_content"
             android:text="radiusRightTop" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbRadiusRightTop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -174,7 +174,7 @@
             android:layout_height="wrap_content"
             android:text="radiusRightBottom" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbRadiusRightBottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -202,7 +202,7 @@
             android:layout_height="wrap_content"
             android:text="borderWidth" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbBorderWidth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -219,7 +219,7 @@
             android:layout_height="wrap_content"
             android:text="borderDashGap" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbBorderDashGap"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -230,7 +230,7 @@
             android:layout_height="wrap_content"
             android:text="borderDashLength" />
 
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbBorderDashLength"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -332,7 +332,7 @@
             android:layout_height="wrap_content"
             android:text="线性渐变旋转角度"
             />
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbGradientLinear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -348,7 +348,7 @@
             android:layout_height="wrap_content"
             android:text="扫描渐变和圆圈渐变X轴中心偏移量"
             />
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbGradientOffset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -367,7 +367,7 @@
             android:layout_height="wrap_content"
             android:text="扫描渐变和圆圈渐变Y轴中心偏移量"
             />
-        <android.support.v7.widget.AppCompatSeekBar
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbGradientOffsetY"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
